--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       </div>
     </footer>
 
-    <script async src="javascript/index.js"></script>
+    <script defer src="javascript/index.js"></script>
   </body>
 </html>
 
