--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -220,7 +220,7 @@
     </div>
   </footer>
 
-    <script async src="javascript/sobre-nosotros.js"></script>
-    <script async src="javascript/index.js"></script>
+    <script defer src="javascript/sobre-nosotros.js"></script>
+    <script defer src="javascript/index.js"></script>
   </body>
 </html>
