--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
   <meta charset="utf-8">
   <meta name=“description” content="Blog especializado en recetas y comida tailandesa">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="style.css"> 
+  <link rel="stylesheet" type="text/css" href="index.css"> 
   <title>DOM SUM | Gastronomía tailandesa</title>
   <link id="favicon" rel="shortcut icon" href="img/favico.ico" type="image/x-icon">
-  <script async src="javascript/index.js"></script>
-
 </head>
 
 <body class="body-index">
@@ -151,6 +149,7 @@
       </div>
     </footer>
 
+    <script async src="javascript/index.js"></script>
   </body>
 </html>
 
