--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -5,9 +5,10 @@
   <meta charset="utf-8">
   <meta name=“description” content="Blog especializado en recetas y comida tailandesa">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="style.css"> 
+  <link rel="stylesheet" type="text/css" href="styles/sobre-nosotros.css"> 
+  <link id="favicon" rel="shortcut icon" href="img/favico.ico" type="image/x-icon">
   <title>DOM SUM | Sobre nosotros</title>
-  <link id="favicon" rel="shortcut icon" href="img/favico.ico" type="image/x-icon"> 
+  <script async src="javascript/sobre-nosotros.js"></script>
 </head>
 
 <body>
@@ -219,8 +220,5 @@
       </div>
     </div>
   </footer>
-
-    <script async src="javascript/sobre-nosotros.js"></script>
-    <script async src="javascript/index.js"></script>
   </body>
 </html>
