--- a/documentacion.html
+++ b/documentacion.html
@@ -5,9 +5,10 @@
   <meta charset="utf-8">
   <meta name=“description” content="Blog especializado en recetas y comida tailandesa">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="style.css"> 
-  <title>DOM SUM | Documentación</title>
+  <link rel="stylesheet" type="text/css" href="styles/documentacion.css"> 
   <link id="favicon" rel="shortcut icon" href="img/favico.ico" type="image/x-icon">
+  <title>DOM SUM | Documentación</title>
+  <script async src="javascript/burguer_menu.js"></script>
 </head>
 
 <body class="body-white">
@@ -217,6 +218,5 @@
     </div>
   </footer>
 
-  <script async src="javascript/index.js"></script>
 </body>
 </html>
