--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta charset="utf-8">
   <meta name=“description” content="Blog especializado en recetas y comida tailandesa">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="index.css"> 
-  <title>DOM SUM | Gastronomía tailandesa</title>
+  <link rel="stylesheet" type="text/css" href="styles/index.css"> 
   <link id="favicon" rel="shortcut icon" href="img/favico.ico" type="image/x-icon">
+  <title>DOM SUM | Gastronomía tailandesa</title>
+  <script async src="javascript/index.js"></script>
 </head>
 
 <body class="body-index">
@@ -148,8 +149,6 @@
         </div>
       </div>
     </footer>
-
-    <script async src="javascript/index.js"></script>
   </body>
 </html>
 
