--- a/tom-yam-kung.html
+++ b/tom-yam-kung.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" type="text/css" href="styles/recetas-detalle.css">
   <link id="favicon" rel="shortcut icon" href="img/favico.ico" type="image/x-icon">
   <title>DOM SUM | Tom Yam Kung</title>
-  <script async src="javascript/burguer_menu.js"></script>
+  <script async src="javascript/burguer-menu.js"></script>
 </head>
 
 <body class="body-white">
