--- a/documentacion.html
+++ b/documentacion.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" type="text/css" href="styles/documentacion.css"> 
   <link id="favicon" rel="shortcut icon" href="img/favico.ico" type="image/x-icon">
   <title>DOM SUM | Documentación</title>
-  <script async src="javascript/burguer_menu.js"></script>
+  <script async src="javascript/burguer-menu.js"></script>
 </head>
 
 <body class="body-white">
