--- a/recetas.html
+++ b/recetas.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" type="text/css" href="styles/recetas.css"> 
   <link id="favicon" rel="shortcut icon" href="img/favico.ico" type="image/x-icon"> 
   <title>DOM SUM | Recetas</title>
-  <script async src="javascript/burguer_menu.js"></script>
+  <script async src="javascript/burguer-menu.js"></script>
 </head>
 
 <body>
