--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta name=“description” content="Blog especializado en recetas y comida tailandesa">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="styles/index.css"> 
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet"> 
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet" crossorigin> 
   <link id="favicon" rel="shortcut icon" href="img/favico.ico" type="image/x-icon">
   <title>DOM SUM | Gastronomía tailandesa</title>
   <script async src="javascript/index.js"></script>
