--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link id="favicon" rel="shortcut icon" href="img/favico.ico" type="image/x-icon">
   <title>DOM SUM | Gastronomía tailandesa</title>
   <script async src="javascript/index.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css">
 </head>
 
 <body class="body-index">
@@ -128,7 +129,7 @@
       <div>
         <div class="footer-right">
           <a href="https://es-es.facebook.com/" aria-label="Ir a su cuenta de Facebook">
-            <img src="img/facebook-f-brands.svg" alt="logotipo de facebook" loading="lazy">
+            <i class="fa-facebook-f fab">
           </a>
           <a href="https://twitter.com/?lang=es" aria-label="Ir a su cuenta de Twitter">
             <img src="img/twitter-brands.svg" alt="logotipo de twitter" loading="lazy">
