--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link id="favicon" rel="shortcut icon" href="img/favico.ico" type="image/x-icon">
   <title>DOM SUM | Gastronomía tailandesa</title>
   <script async src="javascript/index.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css"  crossorigin>
 </head>
 
 <body class="body-index">
