--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta name=“description” content="Blog especializado en recetas y comida tailandesa">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="styles/index.css"> 
+  <link rel="preconnect" href="https://fonts.gstatic.com">
   <link id="favicon" rel="shortcut icon" href="img/favico.ico" type="image/x-icon">
   <title>DOM SUM | Gastronomía tailandesa</title>
   <script async src="javascript/index.js"></script>
-  <script defer src="fontawesome/js/all.js"></script> <!--load all styles -->
 </head>
 
 <body class="body-index">
@@ -128,7 +128,7 @@
       <div>
         <div class="footer-right">
           <a href="https://es-es.facebook.com/" aria-label="Ir a su cuenta de Facebook">
-            <i class="fa-facebook-f fab"></i>
+            <img src="img/facebook-f-brands.svg" alt="logotipo de facebook" loading="lazy">
           </a>
           <a href="https://twitter.com/?lang=es" aria-label="Ir a su cuenta de Twitter">
             <img src="img/twitter-brands.svg" alt="logotipo de twitter" loading="lazy">
