--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   <link id="favicon" rel="shortcut icon" href="img/favico.ico" type="image/x-icon">
   <title>DOM SUM | Gastronomía tailandesa</title>
   <script async src="javascript/index.js"></script>
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css&display=swap" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-</head>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"></head>
 
 <body class="body-index">
 
