--- a/tom-yam-kung.html
+++ b/tom-yam-kung.html
@@ -250,7 +250,9 @@
                           (max-width: 768px) 470px,
                           (max-width: 992px) 420px,
                           400px"
-                  src="img/kaeng-phet-gai-520.jpg"
+                  data-src="img/kaeng-phet-gai-520.jpg"
+                  class="lazyload"
+                  loading="lazy"
                   alt="Receta de Kaeng Phet Gai">
           </div>
 
@@ -264,7 +266,9 @@
                           (max-width: 768px) 470px,
                           (max-width: 992px) 420px,
                           400px"
-                  src="img/kai-med-ma-muang-520.jpg"
+                  data-src="img/kai-med-ma-muang-520.jpg"
+                  class="lazyload"
+                  loading="lazy"
                   alt="Receta de Kai Med Ma Muang">
           </div>
 
@@ -278,7 +282,9 @@
                           (max-width: 768px) 470px,
                           (max-width: 992px) 420px,
                           400px"
-                  src="img/khao-soi-520.jpg"
+                  data-src="img/khao-soi-520.jpg"
+                  class="lazyload"
+                  loading="lazy"
                   alt="Receta de Khao Soi">
           </div>
 
@@ -292,7 +298,9 @@
                           (max-width: 768px) 470px,
                           (max-width: 992px) 420px,
                           400px"
-                  src="img/curry-masam-520.jpg"
+                  data-src="img/curry-masam-520.jpg"
+                  class="lazyload"
+                  loading="lazy"
                   alt="Receta de Curry Massaman">
           </div>
 
@@ -306,7 +314,9 @@
                           (max-width: 768px) 470px,
                           (max-width: 992px) 420px,
                           400px"
-                  src="img/som-tum-520.jpg"
+                  data-src="img/som-tum-520.jpg"
+                  class="lazyload"
+                  loading="lazy"
                   alt="Receta de Som Tum">
           </div>
       </div>
