--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" type="text/css" href="styles/index.css"> 
   <link id="favicon" rel="shortcut icon" href="img/favico.ico" type="image/x-icon">
   <title>DOM SUM | Gastronomía tailandesa</title>
-  <script>/* open-sans-300 - latin */
+  <style>/* open-sans-300 - latin */
     @font-face {
       font-family: 'Open Sans';
       font-style: normal;
@@ -36,7 +36,8 @@
            url('../fonts/open-sans-v20-latin-regular.woff') format('woff'), /* Modern Browsers */
            url('../fonts/open-sans-v20-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
            url('../fonts/open-sans-v20-latin-regular.svg#OpenSans') format('svg'); /* Legacy iOS */
-    }</script>
+    }
+    </style>
   <script async src="javascript/index.js"></script>
 </head>
 
