--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html> 
-<html lang="es"> 
+<!DOCTYPE html>
+<html lang="es">
 
-<head> 
+<head>
   <meta charset="utf-8">
   <meta name=“description” content="Blog especializado en recetas y comida tailandesa">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="styles/sobre-nosotros.css"> 
+  <link rel="stylesheet" type="text/css" href="styles/sobre-nosotros.css">
   <link id="favicon" rel="shortcut icon" href="img/favico.ico" type="image/x-icon">
   <title>DOM SUM | Sobre nosotros</title>
   <script async src="javascript/sobre-nosotros.js"></script>
@@ -13,7 +13,7 @@
 
 <body>
   <header>
-    <nav>         
+    <nav>
       <a href="index.html">
         <div>
           <img src="img/logotipo.svg" alt="logotipo de DOM SUM" class="logo" loading="lazy">
@@ -29,11 +29,11 @@
         <li><a href="documentacion.html">Documentación</a></li>
       </ul>
 
-      <button class="menu-ham" type="button">   
+      <button class="menu-ham" type="button">
         <span class="br-1"></span>
         <span class="br-2"></span>
         <span class="br-3"></span>
-      </button> 
+      </button>
     </nav>
   </header>
 
@@ -45,25 +45,24 @@
           <p id="hora-bangkok"></p>
         </div>
       </div>
-      
+
       <div class="about-us-description">
-        <img src="img/logotipo.svg" alt="logotipo de DOM SUM"  loading="lazy">
-        <p>Encantados de conocerte, somos cuatro amigos a los que nos apasiona viajar e investigar sobre la gastronomía de los lugares que tenemos el placer de visitar. Hemos decidido hacer este blog para dar a conocer un poquito más la comida de Tailandia, son muchas las personas que se deciden a viajar a Tailandia por sus playas e increíble clima cálido pero no todo el mundo es consciente de la riqueza gastronómica de mi país, con infinidad de platos, ingredientes y sabores que sorprenden al viajero que decide a probarlos.</p>
+        <img src="img/logotipo.svg" alt="logotipo de DOM SUM" loading="lazy">
+        <p>Encantados de conocerte, somos cuatro amigos a los que nos apasiona viajar e investigar sobre la gastronomía
+          de los lugares que tenemos el placer de visitar. Hemos decidido hacer este blog para dar a conocer un poquito
+          más la comida de Tailandia, son muchas las personas que se deciden a viajar a Tailandia por sus playas e
+          increíble clima cálido pero no todo el mundo es consciente de la riqueza gastronómica de mi país, con
+          infinidad de platos, ingredientes y sabores que sorprenden al viajero que decide a probarlos.</p>
       </div>
     </section>
 
     <section class="container-people">
       <div>
-        <img  srcset="img/amaia-520.webp 520w,
+        <img srcset="img/amaia-520.webp 520w,
                       img/amaia-470.webp 470w,
-                      img/amaia-400.webp 400w"
-              sizes="(max-width: 576px) 520px,
+                      img/amaia-400.webp 400w" sizes="(max-width: 576px) 520px,
                       (max-width: 992px) 450px,
-                      400px"
-              data-src="img/amaia-520.jpg"
-              class="lazyload"
-              loading="lazy"
-              alt="Amaia, la historiadora del equipo">
+                      400px" src="img/amaia-520.jpg" loading="lazy" alt="Amaia, la historiadora del equipo">
         <div>
           <h4>Amaia</h4>
           <p>"Historiadora con interés por conocer las diferentes formas de vida"</p>
@@ -71,16 +70,11 @@
       </div>
 
       <div>
-          <img  srcset="img/helena-520.webp 520w,
+        <img srcset="img/helena-520.webp 520w,
                         img/helena-470.webp 470w,
-                        img/helena-400.webp 400w"
-                sizes="(max-width: 576px) 520px,
+                        img/helena-400.webp 400w" sizes="(max-width: 576px) 520px,
                         (max-width: 992px) 450px,
-                        400px"
-                data-src="img/helena-520.jpg"
-                class="lazyload"
-              loading="lazy"
-                alt="Helena, la veterinaria del equipo">
+                        400px" src="img/helena-520.jpg" loading="lazy" alt="Helena, la veterinaria del equipo">
         <div>
           <h4>Helena</h4>
           <p>"Veterinaria especializada en el estudio de animales en peligro de extinción"</p>
@@ -88,33 +82,23 @@
       </div>
 
       <div>
-          <img  srcset="img/alejandro-520.webp 520w,
+        <img srcset="img/alejandro-520.webp 520w,
                         img/alejandro-470.webp 470w,
-                        img/alejandro-400.webp 400w"
-                sizes="(max-width: 576px) 520px,
+                        img/alejandro-400.webp 400w" sizes="(max-width: 576px) 520px,
                         (max-width: 992px) 450px,
-                        400px"
-                data-src="img/alejandro-520.jpg"
-                class="lazyload"
-              loading="lazy"
-                alt="Alejandro, el deportista del equipo">
-          <div>
-            <h4>Alejandro</h4>
-            <p>"Apasionado de los deportes de riesgo y de un buen paseo por la montaña"</p>
-          </div>
+                        400px" src="img/alejandro-520.jpg" loading="lazy" alt="Alejandro, el deportista del equipo">
+        <div>
+          <h4>Alejandro</h4>
+          <p>"Apasionado de los deportes de riesgo y de un buen paseo por la montaña"</p>
+        </div>
       </div>
 
       <div>
-          <img  srcset="img/gabriel-520.webp 520w,
+        <img srcset="img/gabriel-520.webp 520w,
                         img/gabriel-470.webp 470w,
-                        img/gabriel-400.webp 400w"
-                sizes="(max-width: 576px) 520px,
+                        img/gabriel-400.webp 400w" sizes="(max-width: 576px) 520px,
                         (max-width: 992px) 450px,
-                        400px"
-                data-src="img/gabriel-520.jpg"
-                class="lazyload"
-                loading="lazy"
-                alt="Gabriel, el viajero del equipo">
+                        400px" src="img/gabriel-520.jpg" loading="lazy" alt="Gabriel, el viajero del equipo">
         <div>
           <h4>Gabriel</h4>
           <p>"Visita cualquier rincón del mundo con su fiel compañero en una caravana"</p>
@@ -125,12 +109,14 @@
     <section class="container-form">
       <div class="photo-form">
         <div>
-          <h1 >Contacta con nosotros</h1>
-          <svg id="animado-svg" version="1.1" x="0px" y="0px" fill="white" viewBox="-10 -20 550 550" xml:space="preserve">
+          <h1>Contacta con nosotros</h1>
+          <svg id="animado-svg" version="1.1" x="0px" y="0px" fill="white" viewBox="-10 -20 550 550"
+            xml:space="preserve">
             <path d="M158.07,407.26c-1.86-1.86-4.44-2.93-7.07-2.93s-5.21,1.069-7.07,2.93c-1.86,1.86-2.93,4.44-2.93,7.07
             c0,2.64,1.07,5.21,2.93,7.069c1.86,1.86,4.44,2.931,7.07,2.931s5.21-1.07,7.07-2.931c1.86-1.859,2.93-4.439,2.93-7.069
-            S159.93,409.12,158.07,407.26z"/>
-            <path d="M503.489,55.416l-90.359-54c-3.159-1.888-7.101-1.888-10.26,0l-90.359,54c-3.861,2.308-5.707,6.909-4.51,11.245
+            S159.93,409.12,158.07,407.26z" />
+            <path
+              d="M503.489,55.416l-90.359-54c-3.159-1.888-7.101-1.888-10.26,0l-90.359,54c-3.861,2.308-5.707,6.909-4.51,11.245
             c1.197,4.336,5.142,7.339,9.64,7.339H398v41.583H296c-5.523,0-10,4.477-10,10v38h-25.95C250.399,143.723,230.023,130,206.5,130
             c-16.679,0-31.767,6.907-42.581,18h-17.487c-47.627,0-91.333,26-114.062,67.853C11.193,254.848,0,298.914,0,343.289
             c0,28.858,12.74,55.975,34.955,74.396C42.976,424.337,53.132,428,63.552,428c17.946,0,34.109-10.658,41.18-27.155l0.39-0.909
@@ -149,9 +135,9 @@
             c3.633,0,7.138-1.986,8.908-5.442c2.519-4.915,0.575-10.941-4.34-13.46c-10.033-5.141-20.866-8.75-32.011-10.719v-39.748V74
             h80.359c4.498,0,8.442-3.003,9.64-7.339C509.196,62.325,507.351,57.724,503.489,55.416z M342,135.582h20v28h-20V135.582z
             M342,183.582h20v44h-20V183.582z M306,135.582h16v28h-16V135.582z M398,267.583h-92v-84h16v54c0,5.523,4.477,10,10,10h40
-            c5.523,0,10-4.477,10-10v-54h16V267.583z M398,163.582h-16v-28h16V163.582z M353.868,54L408,21.649L462.132,54H353.868z"/>
+            c5.523,0,10-4.477,10-10v-54h16V267.583z M398,163.582h-16v-28h16V163.582z M353.868,54L408,21.649L462.132,54H353.868z" />
             <path d="M128.07,214.43c-1.86-1.86-4.44-2.93-7.07-2.93s-5.21,1.07-7.07,2.93s-2.93,4.44-2.93,7.07s1.07,5.21,2.93,7.07
-            s4.44,2.93,7.07,2.93s5.21-1.07,7.07-2.93c1.86-1.86,2.93-4.44,2.93-7.07S129.93,216.29,128.07,214.43z"/>
+            s4.44,2.93,7.07,2.93s5.21-1.07,7.07-2.93c1.86-1.86,2.93-4.44,2.93-7.07S129.93,216.29,128.07,214.43z" />
             <path d="M504.021,235.473c-2.036-5.134-7.846-7.646-12.982-5.61c-5.134,2.036-7.646,7.848-5.61,12.982
             c4.36,10.996,6.571,22.628,6.571,34.571v22.158c0,30.973-12.439,60.346-34,81.818V321c0-5.522-4.477-10-10-10s-10,4.478-10,10
             v81.819c0,0.005,0,0.009,0,0.014v80.486c0,4.787-3.895,8.682-8.682,8.682h-16.303c-4.787,0-8.682-3.895-8.682-8.682V405.93
@@ -162,18 +148,19 @@
             C204.133,512,217,499.134,217,483.318v-70.993c11.441,4.468,23.681,6.789,36.104,6.789h116.667c4.893,0,9.758-0.366,14.563-1.074
             v65.278c0,15.815,12.867,28.682,28.682,28.682h16.303C445.133,512,458,499.134,458,483.318v-75.525
             c13.744-10.346,25.215-23.078,34-37.405V445c0,5.522,4.477,10,10,10s10-4.478,10-10V299.574v-22.158
-            C512,262.937,509.315,248.826,504.021,235.473z"/>
-            <path d="M482.45,200.901l-0.364-0.398c-3.74-4.065-10.066-4.327-14.13-0.588c-4.064,3.74-4.327,10.066-0.588,14.13l0.274,0.3
-            c1.974,2.174,4.685,3.278,7.407,3.278c2.398,0,4.804-0.857,6.719-2.596C485.857,211.314,486.162,204.99,482.45,200.901z"/>
+            C512,262.937,509.315,248.826,504.021,235.473z" />
+            <path
+              d="M482.45,200.901l-0.364-0.398c-3.74-4.065-10.066-4.327-14.13-0.588c-4.064,3.74-4.327,10.066-0.588,14.13l0.274,0.3
+            c1.974,2.174,4.685,3.278,7.407,3.278c2.398,0,4.804-0.857,6.719-2.596C485.857,211.314,486.162,204.99,482.45,200.901z" />
             <path d="M200.282,170.125c-5.523,0-10,4.477-10,10s4.477,10,10,10c6.84,0,12.405,5.565,12.405,12.406V231.5
-            c0,5.523,4.477,10,10,10s10-4.477,10-10v-28.969C232.687,184.662,218.15,170.125,200.282,170.125z"/>
+            c0,5.523,4.477,10,10,10s10-4.477,10-10v-28.969C232.687,184.662,218.15,170.125,200.282,170.125z" />
           </svg>
         </div>
       </div>
       <div class="form-fields">
         <form id="form" class="form">
           <fieldset id="formulario-contacto">
-            <div> 
+            <div>
               <input class="feedback-input" type="text" name="name" id="name" placeholder="Nombre">
               <p class="warnings" id="warning-name"></p>
             </div>
@@ -220,5 +207,6 @@
       </div>
     </div>
   </footer>
-  </body>
+</body>
+
 </html>
